// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom projectName 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": "custom-pr-project",
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheckCodeBuildResultFunctionB463365BDF937EEE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc850fa9804af799fd22b17c77c562408123712b864Rule01914679": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`custom setup 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_LARGE",
          "Image": "aws/codebuild/python:3.7.1",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheckCodeBuildResultFunctionB463365BDF937EEE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc850fa9804af799fd22b17c77c562408123712b864Rule01914679": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`default setup 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheckCodeBuildResultFunctionB463365BDF937EEE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc850fa9804af799fd22b17c77c562408123712b864Rule01914679": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`events 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheckCodeBuildResultFunctionB463365BDF937EEE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectfailed5BB50AF8": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "FAILED",
            ],
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectstartedCC87AFA2": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "IN_PROGRESS",
            ],
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectsucceededF9BA7C5E": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "build-status": Array [
              "SUCCEEDED",
            ],
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Ref": "TopicBFC7AF6E",
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc850fa9804af799fd22b17c77c562408123712b864Rule01914679": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "TopicBFC7AF6E": Object {
      "Type": "AWS::SNS::Topic",
    },
    "TopicPolicyA1747468": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
              "Resource": Object {
                "Ref": "TopicBFC7AF6E",
              },
              "Sid": "0",
            },
          ],
          "Version": "2012-10-17",
        },
        "Topics": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
      },
      "Type": "AWS::SNS::TopicPolicy",
    },
  },
}
`;

exports[`privileged 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheckCodeBuildResultFunctionE246172A": Object {
      "DependsOn": Array [
        "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckCodeBuildResultFunctionServiceRoleDefaultPolicy1A7E6FA2",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckCodeBuildResultFunctionServiceRole18C3CF5B",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheckPullRequestProjectF12CB57F",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectEventsRoleDefaultPolicy949E41E9",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectF12CB57F": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": true,
          "Type": "LINUX_CONTAINER",
        },
        "Name": Object {
          "Fn::Join": Array [
            "",
            Array [
              Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Name",
                ],
              },
              "-pull-request",
            ],
          ],
        },
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectRole63741937",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckCodeBuildResultFunctionE246172A",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheckPullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheckCodeBuildResultFunctionB463365BDF937EEE": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckCodeBuildResultFunctionE246172A",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheckPullRequestProjectPullRequestValidationRule16A1C1AC",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheckPullRequestProjectRole63741937": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheckPullRequestProjectF12CB57F",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheckPullRequestProjectRoleDefaultPolicyBB7DD656",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheckPullRequestProjectRole63741937",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryDescription": "Some description.",
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc850fa9804af799fd22b17c77c562408123712b864Rule01914679": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectF12CB57F",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheckPullRequestProjectEventsRoleE5A7F0BC",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;

exports[`randomizer 1`] = `
Object {
  "Parameters": Any<Object>,
  "Resources": Object {
    "PullRequestCheck1CodeBuildResultFunction92561847": Object {
      "DependsOn": Array [
        "PullRequestCheck1CodeBuildResultFunctionServiceRoleDefaultPolicy31D58607",
        "PullRequestCheck1CodeBuildResultFunctionServiceRole56BD8BE4",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck1CodeBuildResultFunctionServiceRole56BD8BE4",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheck1CodeBuildResultFunctionServiceRole56BD8BE4": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck1CodeBuildResultFunctionServiceRoleDefaultPolicy31D58607": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck1CodeBuildResultFunctionServiceRoleDefaultPolicy31D58607",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck1CodeBuildResultFunctionServiceRole56BD8BE4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheck1PullRequestProject5F0F8D5E": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": "project1",
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck1PullRequestProjectRole59EA0837",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck1.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheck1PullRequestProjectEventsRole04092548": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck1PullRequestProjectEventsRoleDefaultPolicy005514ED": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheck1PullRequestProject5F0F8D5E",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck1PullRequestProjectEventsRoleDefaultPolicy005514ED",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck1PullRequestProjectEventsRole04092548",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheck1PullRequestProjectPullRequestValidationRule30536953": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheck1PullRequestProject5F0F8D5E",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck1CodeBuildResultFunction92561847",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheck1PullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheck1CodeBuildResultFunctionB9726A5EEF4EF97A": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck1CodeBuildResultFunction92561847",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck1PullRequestProjectPullRequestValidationRule30536953",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheck1PullRequestProjectRole59EA0837": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck1PullRequestProjectRoleDefaultPolicy38AEE7C8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheck1PullRequestProject5F0F8D5E",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheck1PullRequestProject5F0F8D5E",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheck1PullRequestProject5F0F8D5E",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck1PullRequestProjectRoleDefaultPolicy38AEE7C8",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck1PullRequestProjectRole59EA0837",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheck2CodeBuildResultFunctionF377E6BC": Object {
      "DependsOn": Array [
        "PullRequestCheck2CodeBuildResultFunctionServiceRoleDefaultPolicy312EF539",
        "PullRequestCheck2CodeBuildResultFunctionServiceRole5CE92E16",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Environment": Object {
          "Variables": Object {
            "POST_COMMENT": "TRUE",
            "UPDATE_APPROVAL_STATE": "TRUE",
          },
        },
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck2CodeBuildResultFunctionServiceRole5CE92E16",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "PullRequestCheck2CodeBuildResultFunctionServiceRole5CE92E16": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck2CodeBuildResultFunctionServiceRoleDefaultPolicy312EF539": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "codecommit:PostCommentForPullRequest",
                "codecommit:UpdatePullRequestApprovalState",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck2CodeBuildResultFunctionServiceRoleDefaultPolicy312EF539",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck2CodeBuildResultFunctionServiceRole5CE92E16",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheck2PullRequestProjectB997FA72": Object {
      "Properties": Object {
        "Artifacts": Object {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": Object {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": "alias/aws/s3",
        "Environment": Object {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "Image": "aws/codebuild/standard:4.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": false,
          "Type": "LINUX_CONTAINER",
        },
        "Name": "project2",
        "ServiceRole": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck2PullRequestProjectRole6C2ED067",
            "Arn",
          ],
        },
        "Source": Object {
          "BuildSpec": "buildspecs/prcheck2.yml",
          "Location": Object {
            "Fn::GetAtt": Array [
              "Repository22E53BBD",
              "CloneUrlHttp",
            ],
          },
          "Type": "CODECOMMIT",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "PullRequestCheck2PullRequestProjectEventsRoleCF7CBD01": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "events.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck2PullRequestProjectEventsRoleDefaultPolicy3B212C51": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codebuild:StartBuild",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "PullRequestCheck2PullRequestProjectB997FA72",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck2PullRequestProjectEventsRoleDefaultPolicy3B212C51",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck2PullRequestProjectEventsRoleCF7CBD01",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "PullRequestCheck2PullRequestProjectPullRequestValidationRuleAllowEventRulePullRequestCheck2CodeBuildResultFunction1F51445708CBE155": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck2CodeBuildResultFunctionF377E6BC",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "PullRequestCheck2PullRequestProjectPullRequestValidationRuleC4FD66A7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "PullRequestCheck2PullRequestProjectPullRequestValidationRuleC4FD66A7": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "project-name": Array [
              Object {
                "Ref": "PullRequestCheck2PullRequestProjectB997FA72",
              },
            ],
          },
          "detail-type": Array [
            "CodeBuild Build State Change",
          ],
          "source": Array [
            "aws.codebuild",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck2CodeBuildResultFunctionF377E6BC",
                "Arn",
              ],
            },
            "Id": "Target0",
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "PullRequestCheck2PullRequestProjectRole6C2ED067": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "PullRequestCheck2PullRequestProjectRoleDefaultPolicyCF7F8846": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "codecommit:GitPull",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "Repository22E53BBD",
                  "Arn",
                ],
              },
            },
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Array [
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheck2PullRequestProjectB997FA72",
                      },
                    ],
                  ],
                },
                Object {
                  "Fn::Join": Array [
                    "",
                    Array [
                      "arn:",
                      Object {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      Object {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      Object {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/codebuild/",
                      Object {
                        "Ref": "PullRequestCheck2PullRequestProjectB997FA72",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            Object {
              "Action": Array [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":report-group/",
                    Object {
                      "Ref": "PullRequestCheck2PullRequestProjectB997FA72",
                    },
                    "-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "PullRequestCheck2PullRequestProjectRoleDefaultPolicyCF7F8846",
        "Roles": Array [
          Object {
            "Ref": "PullRequestCheck2PullRequestProjectRole6C2ED067",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "Repository22E53BBD": Object {
      "Properties": Object {
        "RepositoryName": "MyRepositoryName",
      },
      "Type": "AWS::CodeCommit::Repository",
    },
    "Repositoryc817ef960f60dacab43b0cb7d1e0234b329cdaad49Rule4F5F406C": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck1PullRequestProject5F0F8D5E",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck1PullRequestProjectEventsRole04092548",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "Repositoryc84e1ee00c4f42c641a1cb34226c8d726d6ac2b0b2Rule5365B30B": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "event": Array [
              "pullRequestSourceBranchUpdated",
              "pullRequestCreated",
            ],
          },
          "detail-type": Array [
            "CodeCommit Pull Request State Change",
          ],
          "resources": Array [
            Object {
              "Fn::GetAtt": Array [
                "Repository22E53BBD",
                "Arn",
              ],
            },
          ],
          "source": Array [
            "aws.codecommit",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck2PullRequestProjectB997FA72",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "detail-destinationCommit": "$.detail.destinationCommit",
                "detail-pullRequestId": "$.detail.pullRequestId",
                "detail-repositoryNames-0-": "$.detail.repositoryNames[0]",
                "detail-revisionId": "$.detail.revisionId",
                "detail-sourceCommit": "$.detail.sourceCommit",
              },
              "InputTemplate": "{\\"sourceVersion\\":<detail-sourceCommit>,\\"environmentVariablesOverride\\":[{\\"name\\":\\"pullRequestId\\",\\"value\\":<detail-pullRequestId>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"repositoryName\\",\\"value\\":<detail-repositoryNames-0->,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"sourceCommit\\",\\"value\\":<detail-sourceCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"destinationCommit\\",\\"value\\":<detail-destinationCommit>,\\"type\\":\\"PLAINTEXT\\"},{\\"name\\":\\"revisionId\\",\\"value\\":<detail-revisionId>,\\"type\\":\\"PLAINTEXT\\"}]}",
            },
            "RoleArn": Object {
              "Fn::GetAtt": Array [
                "PullRequestCheck2PullRequestProjectEventsRoleCF7CBD01",
                "Arn",
              ],
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
  },
}
`;
